Fix button spacing (#222)
- change margin-right of the Next button on BasewizardPage so that
the button aligns with the content of the page
- change margin-right of the Import From CSV button so that the button
aligns with the right edge of the table below

--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -77,19 +77,6 @@ p {
   margin-left: 10px;
 }
 
-.footer-container {
-  margin: 10px;
-  margin-right: 0px;
-  height: 35px;
-  float: right;
-}
-
-.wizard-content-container.hasHeader{
-  .footer-container {
-    margin-right: 20px;
-  }
-}
-
 .helper {
   cursor: pointer;
   margin: 5px;
