--- a/src/styles/components/buttons.less
+++ b/src/styles/components/buttons.less
@@ -78,6 +78,9 @@
 // Buttons in a .btn-row are automatically separated with a gap
 .btn-row .btn:not(:last-child){
   margin-right: 0.5em;
+  &.last-button {
+    margin-right: 0em;
+  }
 }
 
 .card {
